--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main style="height: 300px;" class="d-flex justify-content-center align-items-center">
         <div class="text-center">
             <h2 class="text-white">My Projects</h2>
-            <a class="btn btn-warning">Shopper Template</a>
+            <a class="btn btn-warning" href="./public/shopper.html">Shopper Template</a>
             <a class="btn btn-light">Landkit Template</a>
             <a class="btn btn-danger">EMI Calculator</a>
             <div class="mt-4">
